create github pages

--- a/aplikasi-perkantoran.html
+++ b/aplikasi-perkantoran.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
-<title>index</title><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; --monospace:"Lucida Console",Consolas,"Courier",monospace; }
+<title>aplikasi-perkantoran</title><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; --monospace:"Lucida Console",Consolas,"Courier",monospace; }
 html { font-size: 14px; background-color: var(--bg-color); color: var(--text-color); font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; -webkit-font-smoothing: antialiased; }
 body { margin: 0px; padding: 0px; height: auto; bottom: 0px; top: 0px; left: 0px; right: 0px; font-size: 1rem; line-height: 1.42857; overflow-x: hidden; background: inherit; }
 iframe { margin: auto; }
@@ -205,6 +205,6 @@ table tbody + tbody { border-top: 2px solid rgb(221, 221, 221); }
 </style>
 </head>
 <body class='typora-export' >
-<div  id='write'  class = 'is-node'><h1><a name='header-n0' class='md-header-anchor '></a>Pertemuan Ketiga.</h1><h2><a name='header-n2' class='md-header-anchor '></a>Daftar Isi</h2><ol start='' ><li><a href='desktop-environtment.html'>Review DE</a></li><li><a href='aplikasi-perkantoran.html'>Menggunakan Aplikasi Perkantoran</a></li></ol><h2><a name='header-n8' class='md-header-anchor '></a>Out of Topic</h2><ol start='' ><li>Aircrack.</li><li>Git dan Github.</li></ol><hr /><p><strong>Mari Kita Praktikum.</strong></p></div>
+<div  id='write'  class = 'is-node'><h1><a name='header-n0' class='md-header-anchor '></a>Menggunakan Aplikasi Perkantoran.</h1><p><img src='img/libre-office.jpg' alt='' referrerPolicy='no-referrer' /></p><h2><a name='header-n3' class='md-header-anchor '></a>Teori Sedikit.</h2><ol start='' ><li><p>Aplikasi Perkantoran / Office?</p></li><li><p>Software Office.</p><ul><li>Microsoft Office: (Windows and Mac).</li><li>Libre Office: (Windows, Linux, Mac).</li><li>Google Docs: (Online).</li></ul></li><li><p>Libre Office:</p><ul><li>Pengolah Kata: LibreOffice Writer.</li><li>Pengolah Angka: LibreOffice Calc.</li><li>Pengolah Presentasi: LibreOffice Impress.</li></ul></li><li><p>Format Office.</p><ul><li>docx vs odt</li><li>xlxs vs ods</li><li>pptx vs odp</li></ul></li></ol><h2><a name='header-n34' class='md-header-anchor '></a>Yuk Praktikum.</h2><h4><a name='header-n35' class='md-header-anchor '></a>LibreOffice Writer</h4><ol start='' ><li>Membuka LibreOffice Writer.</li><li>Menyimpan Dokumen.</li><li>Menyimpan Dokumen format PDF.</li><li>Print Dokumen.</li></ol><h4><a name='header-n45' class='md-header-anchor '></a>LibreOffice Calc.</h4><ol start='' ><li>Membuka LibreOffice Calc.</li><li>Menyimpan Dokumen.</li><li>Menyimpan Dokumen format PDF.</li><li>Print Dokumen.</li></ol><h4><a name='header-n55' class='md-header-anchor '></a>LibreOffice Impress.</h4><ol start='' ><li>Membuka LibreOffice Impress.</li><li>Menyimpan Dokumen.</li><li>Menyimpan Dokumen format PDF.</li><li>Print Dokumen.</li></ol><hr /><h2><a name='header-n66' class='md-header-anchor '></a>Selesai.</h2></div>
 </body>
 </html>
