--- a/desktop-environtment.html
+++ b/desktop-environtment.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
-<title>index</title><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; --monospace:"Lucida Console",Consolas,"Courier",monospace; }
+<title>desktop-environtment</title><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; --monospace:"Lucida Console",Consolas,"Courier",monospace; }
 html { font-size: 14px; background-color: var(--bg-color); color: var(--text-color); font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; -webkit-font-smoothing: antialiased; }
 body { margin: 0px; padding: 0px; height: auto; bottom: 0px; top: 0px; left: 0px; right: 0px; font-size: 1rem; line-height: 1.42857; overflow-x: hidden; background: inherit; }
 iframe { margin: auto; }
@@ -205,6 +205,11 @@ table tbody + tbody { border-top: 2px solid rgb(221, 221, 221); }
 </style>
 </head>
 <body class='typora-export' >
-<div  id='write'  class = 'is-node'><h1><a name='header-n0' class='md-header-anchor '></a>Pertemuan Ketiga.</h1><h2><a name='header-n2' class='md-header-anchor '></a>Daftar Isi</h2><ol start='' ><li><a href='desktop-environtment.html'>Review DE</a></li><li><a href='aplikasi-perkantoran.html'>Menggunakan Aplikasi Perkantoran</a></li></ol><h2><a name='header-n8' class='md-header-anchor '></a>Out of Topic</h2><ol start='' ><li>Aircrack.</li><li>Git dan Github.</li></ol><hr /><p><strong>Mari Kita Praktikum.</strong></p></div>
+<div  id='write'  class = 'is-node'><h1><a name='header-n0' class='md-header-anchor '></a>Lingkungan Desktop / Desktop Environtment GNU/Linux</h1><p><img src='img/unity.png' alt='' referrerPolicy='no-referrer' /></p><h2><a name='header-n3' class='md-header-anchor '></a>Teori Sedikit.</h2><ol start='' ><li><p>Apa itu DE (Desktop Environtment)?</p></li><li><p>Jenis-Jenis DE</p><ol start='' ><li><strong>Ubuntu: Unity.</strong>
+<img src='img/unity.png' alt='' referrerPolicy='no-referrer' /><br><br></li><li><strong>Xubuntu: XFCE.</strong>
+<img src='img/xubuntu.png' alt='' referrerPolicy='no-referrer' /><br><br></li><li><strong>Lubuntu: LXDE.</strong>
+<img src='img/lubuntu.png' alt='' referrerPolicy='no-referrer' /><br><br></li><li><strong>Kubuntu: KDE.</strong>
+<img src='img/kubuntu.png' alt='' referrerPolicy='no-referrer' /><br><br></li></ol></li><li><p>Apa itu Manajemen Paket (Package Management)?</p></li><li><p>Apa itu Repository?</p></li><li><p>Apa itu Ubuntu Software Center?</p></li></ol><h2><a name='header-n24' class='md-header-anchor '></a>Yuk Praktikum</h2><h4><a name='header-n25' class='md-header-anchor '></a>Menjalankan Aplikasi.</h4><ol start='' ><li>Menjalankan Browser (Firefox).</li></ol><h4><a name='header-n29' class='md-header-anchor '></a>Mengubah Pengaturan Desktop.</h4><ol start='' ><li>Mengubah Background.</li><li>Mengubah Themes.</li><li>Mengubah Ukuran Icon Launcher</li></ol><h4><a name='header-n37' class='md-header-anchor '></a>Manajemen Software.</h4><ol start='' ><li>Install aplikasi VLC melalui Terminal.<br>
+<code>sudo apt-get install vlc</code></li><li>Install aplikasi VLC melalui Ubuntu Software Center.</li></ol><hr /><h2><a name='header-n44' class='md-header-anchor '></a>Diskusi atau <a href='aplikasi-perkantoran.html'>Lanjut</a>?</h2></div>
 </body>
 </html>
