--- a/index.html
+++ b/index.html
@@ -205,6 +205,6 @@ table tbody + tbody { border-top: 2px solid rgb(221, 221, 221); }
 </style>
 </head>
 <body class='typora-export' >
-<div  id='write'  class = 'is-node'><h1><a name='header-n0' class='md-header-anchor '></a>Pertemuan Ketiga.</h1><h2><a name='header-n2' class='md-header-anchor '></a>Daftar Isi</h2><ol start='' ><li><a href='desktop-environtment.html'>Review DE</a></li><li><a href='aplikasi-perkantoran.html'>Menggunakan Aplikasi Perkantoran</a></li></ol><h2><a name='header-n8' class='md-header-anchor '></a>Out of Topic</h2><ol start='' ><li>Aircrack.</li><li>Git dan Github.</li></ol><hr /><p><strong>Mari Kita Praktikum.</strong></p></div>
+<div  id='write'  class = 'is-node'><h1><a name='header-n0' class='md-header-anchor '></a>Pertemuan Ketiga.</h1><h2><a name='header-n2' class='md-header-anchor '></a>Daftar Isi</h2><ol start='' ><li><a href='tes.html'>Review DE</a></li><li><a href='aplikasi-perkantoran.html'>Menggunakan Aplikasi Perkantoran</a></li></ol><h2><a name='header-n8' class='md-header-anchor '></a>Out of Topic</h2><ol start='' ><li>Aircrack.</li><li>Git dan Github.</li></ol><hr /><p><strong>Mari Kita Praktikum.</strong></p></div>
 </body>
 </html>
